--- a/CowinTrackerAPI/appsettings.Development.json
+++ b/CowinTrackerAPI/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Initial Catalog=cowinTracker;Trusted_Connection=True"
   }
 }
