--- a/CowinTrackerAPI/appsettings.json
+++ b/CowinTrackerAPI/appsettings.json
@@ -6,8 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:shivam-singh.database.windows.net,1433;Initial Catalog=cowinTracker;Persist Security Info=False;User ID=sks71093;Password=Rachel@12345#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-  }
+  "AllowedHosts": "*"
 }
