Email expiry handle

--- a/CowinTrackerAPI/appsettings.Development.json
+++ b/CowinTrackerAPI/appsettings.Development.json
@@ -8,6 +8,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Initial Catalog=cowinTracker;Trusted_Connection=True"
+    //"DefaultConnection": "Server=localhost;Initial Catalog=cowinTracker;Trusted_Connection=True"
+    "DefaultConnection": "Data Source=tcp:shivam-singh.database.windows.net,1433;Initial Catalog=cowinTracker;User Id=sks71093@shivam-singh;Password=Rachel@12345#"
   }
 }
